--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity android:name=".RegistrationActivity"></activity>
         <activity
             android:name=".StoreHome"
-            android:label="@string/title_activity_store_home" />
+            android:label="@string/title_activity_store_home"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name"
